--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
                     </table>
 
                 </div>
+                 <div id="contact-div">
+                    <h2>Contacts</h2>
+                    <ul>
+                       <li><span>Watsapp: </span> 237653585007</li>
+                       <li><span>Email: </span> dobgimadarryl@gmail.com</li>
+                       <li><span>LinkedIn: </span>Dobgima Darryl Woba</li>
+                    </ul>
+                </div>
         </div>
      
         
